// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadioGroup.vue should be in error when v-radio-group is 1`] = `

<div role="radiogroup"
     class="v-input-group v-input-group--error radio-group radio-group--column error--text"
>
  <div class="v-input-group__input">
    <div role="radio"
         aria-checked="true"
         class="v-input-group v-input-group--active v-input-group--selection-controls radio"
         tabindex="0"
    >
      <label>
      </label>
      <div class="v-input-group__input">
        <i aria-hidden="true"
           class="icon icon--selection-control material-icons fade-transition-leave fade-transition-leave-active"
        >
          radio_button_unchecked
        </i>
        <i aria-hidden="true"
           class="icon icon--selection-control material-icons icon--radio fade-transition-enter fade-transition-enter-active"
           style="-webkit-transform-origin: top center 0;"
        >
          radio_button_checked
        </i>
        <div class="v-input-group--selection-controls__ripple">
        </div>
        <input type="radio"
               style="display: none;"
        >
      </div>
    </div>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;

exports[`VRadioGroup.vue should be in error when v-radio-group is 2`] = `

<div role="radiogroup"
     class="v-input-group radio-group radio-group--column"
>
  <div class="v-input-group__input">
    <div role="radio"
         aria-checked="true"
         class="v-input-group v-input-group--active v-input-group--selection-controls radio accent--text"
         tabindex="0"
    >
      <label>
      </label>
      <div class="v-input-group__input">
        <i aria-hidden="true"
           class="icon icon--selection-control material-icons fade-transition-leave fade-transition-leave-active"
        >
          radio_button_unchecked
        </i>
        <i aria-hidden="true"
           class="icon icon--selection-control material-icons icon--radio fade-transition-enter fade-transition-enter-active"
           style="-webkit-transform-origin: top center 0;"
        >
          radio_button_checked
        </i>
        <div class="v-input-group--selection-controls__ripple">
        </div>
        <input type="radio"
               style="display: none;"
        >
      </div>
    </div>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;

exports[`VRadioGroup.vue should render role on radio group 1`] = `

<div role="radiogroup"
     class="v-input-group radio-group radio-group--column"
>
  <div class="v-input-group__input">
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;
